- fixed package name

--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -11,7 +11,7 @@ Group:		System/Packages
 BuildRoot:	%{_tmppath}/%{name}-%{version}-build
 Source:		snapper-%{version}.tar.bz2
 Prefix:		/usr
-BuildRequires:	gcc-c++ boost-devel blocxx-devel doxygen dejagnu libxml2-devel
+BuildRequires:	gcc-c++ boost-devel libblocxx-devel doxygen dejagnu libxml2-devel
 Requires:	libsnapper@LIBVERSION_MAJOR@ = %version
 Recommends:	cron logrotate snapper-zypp-plugin
 Summary:	Tool for filesystem snapshot management
