- moved filesystem depended code new classes - renamed baseDir to infoDir - added some code for ext4 snapshots

--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -11,6 +11,7 @@ libsnapper_la_SOURCES =					\
 	Snapper.cc		Snapper.h		\
 	Snapshot.cc		Snapshot.h		\
 	Comparison.cc		Comparison.h		\
+	Filesystem.cc		Filesystem.h		\
 	File.cc			File.h			\
 	XmlFile.cc		XmlFile.h		\
 	Enum.cc			Enum.h			\
