--- a/doc/snapper.8.in
+++ b/doc/snapper.8.in
@@ -157,9 +157,9 @@ Unmount a snapshot. Not required for all filesystem types.
 
 .TP
 .B diff [options] <number1> <number2>
-Compare two snapshots. This will show a list of files and directories
-that have been created, modified or deleted in the time between the two
-snapshots have been made.
+Compare the snapshots number1 and number2. This will show a list of files and
+directories that have been created, modified or deleted in the time between
+the two snapshots have been made.
 .TP
 \fI\-o, \-\-output\fR <file>
 Write output to file <file>.
@@ -169,7 +169,7 @@ Compare the file <file> between the two snapshots.
 
 .TP
 .B rollback [options] <number1> <number2>
-Rollback changes between the two snapshots.
+Rollback changes done between snapshot number1 and number2.
 .TP
 \fI\-f, \-\-file\fR <file>
 Read the files to rollback from the file <file>.
