use Wizard::SetDesktopTitleAndIcon
svn path=/trunk/snapper/; revision=66122

--- a/yast2-snapper.spec.in
+++ b/yast2-snapper.spec.in
@@ -1,7 +1,7 @@
 @HEADER-COMMENT@
 
 @HEADER@
-Requires:	yast2
+Requires:	yast2 >= 2.21.22
 License: GPL v2 or later
 BuildRequires:	update-desktop-files yast2 yast2-devtools yast2-testsuite libsnapper-devel doxygen yast2-core-devel gcc-c++ perl-XML-Writer
 
