- added python bindings by Thomas Fehr

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -6,7 +6,7 @@ INCLUDES = -I$(top_srcdir)
 
 LDADD = ../snapper/libsnapper.la
 
-noinst_PROGRAMS = List ListAll Create CmpDirs CreateTimeline
+noinst_PROGRAMS = List ListAll Create CmpDirs CreateTimeline SnapTest
 
 List_SOURCES = List.cc
 
@@ -17,4 +17,6 @@ Create_SOURCES = Create.cc
 CmpDirs_SOURCES = CmpDirs.cc
 
 CreateTimeline_SOURCES = CreateTimeline.cc
+
+SnapTest_SOURCES = SnapTest.cc
 
