--- a/yast2-snapper.spec.in
+++ b/yast2-snapper.spec.in
@@ -2,7 +2,7 @@
 
 @HEADER@
 Requires:	yast2 >= 2.21.22
-License: GPL v2 or later
+License: GPL-2.0+
 BuildRequires:	update-desktop-files yast2 yast2-devtools yast2-testsuite libsnapper-devel doxygen yast2-core-devel gcc-c++ perl-XML-Writer
 
 Summary:	YaST - file system snapshots review
