- added the copyright header as obs wants it

--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -1,7 +1,22 @@
 #
-# spec file for package snapper (Version @VERSION@)
+# spec file for package snapper
 #
+# Copyright (c) 2011 SUSE LINUX Products GmbH, Nuernberg, Germany.
+#
+# All modifications and additions to the file contributed by third parties
+# remain the property of their copyright owners, unless otherwise agreed
+# upon. The license for this file, and modifications and additions to the
+# file, is the same license as for the pristine package itself (unless the
+# license for the pristine package is not an Open Source License, in which
+# case the license is the MIT License). An "Open Source License" is a
+# license that conforms to the Open Source Definition (Version 1.9)
+# published by the Open Source Initiative.
+
+# Please submit bugfixes or comments via http://bugs.opensuse.org/
+#
+
 # norootforbuild
+
 
 Name:		snapper
 Version:	@VERSION@
@@ -132,3 +147,5 @@ Authors:
 %files -n snapper-zypp-plugin
 %defattr(-,root,root)
 /usr/lib/zypp/plugins/commit/snapper.py
+
+%changelog
