- package Python bindings

--- a/configure.in
+++ b/configure.in
@@ -21,6 +21,7 @@ AC_DISABLE_STATIC
 AC_PROG_CXX
 AC_PROG_LIBTOOL
 AM_PROG_LIBTOOL
+AM_PATH_PYTHON
 
 AC_PREFIX_DEFAULT(/usr)
 
@@ -44,6 +45,8 @@ AC_OUTPUT(
 	Makefile
 	snapper/Makefile
 	examples/Makefile
+	bindings/Makefile
+	bindings/python/Makefile
 	tools/Makefile
 	tools/utils/Makefile
 	scripts/Makefile
