--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -27,6 +27,7 @@ BuildRoot:	%{_tmppath}/%{name}-%{version}-build
 Source:		snapper-%{version}.tar.bz2
 Prefix:		/usr
 BuildRequires:	boost-devel doxygen gcc-c++ libblocxx-devel libtool libxml2-devel
+BuildRequires:	python-devel swig
 BuildRequires:	libzypp(plugin:commit)
 Requires:	libsnapper@LIBVERSION_MAJOR@ = %version
 Recommends:	cron logrotate snapper-zypp-plugin
@@ -62,6 +63,9 @@ make %{?jobs:-j%jobs}
 make install DESTDIR="$RPM_BUILD_ROOT"
 
 %{find_lang} snapper
+
+rm -f $RPM_BUILD_ROOT/%{python_sitearch}/_libsnapper.a
+rm -f $RPM_BUILD_ROOT/%{python_sitearch}/_libsnapper.la
 
 %clean
 rm -rf "$RPM_BUILD_ROOT"
@@ -130,6 +134,22 @@ Authors:
 %{_libdir}/libsnapper.la
 %{_libdir}/libsnapper.so
 %{prefix}/include/snapper
+
+%package -n libsnapper-python
+Summary:	Python bindings for libsnapper
+Group:		System/Libraries
+
+%description -n libsnapper-python
+This package contains Python bindings for libsnapper.
+
+Authors:
+--------
+    Thomas Fehr <fehr@suse.de>
+
+%files -n libsnapper-python
+%defattr(-,root,root)
+%{python_sitelib}/libsnapper.py*
+%attr(755,root,root) %{python_sitearch}/_libsnapper.so
 
 %package -n snapper-zypp-plugin
 Requires:	snapper libzypp(plugin:commit) zypp-plugin-python
