--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -27,7 +27,7 @@ libsnapper_la_SOURCES =					\
 	SnapperDefines.h
 
 libsnapper_la_LDFLAGS = -version-info @LIBVERSION_INFO@
-libsnapper_la_LIBADD = -lblocxx -lxml2
+libsnapper_la_LIBADD = @LIBBLOCXX@ -lxml2
 
 pkgincludedir = $(includedir)/snapper
 
