- don't create read-only btrfs snapshots on old systems

--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -23,6 +23,7 @@ License:	GPL-2.0
 Group:		System/Packages
 BuildRoot:	%{_tmppath}/%{name}-%{version}-build
 Source:		snapper-%{version}.tar.bz2
+Patch1:		no-readonly.diff
 Prefix:		/usr
 BuildRequires:	boost-devel doxygen gcc-c++ libtool libxml2-devel
 BuildRequires:	python-devel swig
@@ -49,6 +50,9 @@ Authors:
 
 %prep
 %setup -n snapper-%{version}
+%if (0%{?suse_version} && 0%{?suse_version} < 1210) || (0%{?fedora} && 0%{?fedora} < 17)
+%patch1
+%endif
 
 %build
 export CFLAGS="$RPM_OPT_FLAGS -DNDEBUG"
