--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -2,7 +2,10 @@
 # Makefile.am for snapper/snapper
 #
 
-AM_CXXFLAGS = -D_FILE_OFFSET_BITS=64 -I/usr/include/libxml2
+AM_CXXFLAGS = -D_FILE_OFFSET_BITS=64
+
+INCLUDES = -I/usr/include/libxml2
+
 
 lib_LTLIBRARIES = libsnapper.la
 
