--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,7 +2,8 @@
 # Makefile.am for snapper/data
 #
 
-EXTRA_DIST = sysconfig.snapper base.txt x11.txt snapper.logrotate default-config
+EXTRA_DIST = sysconfig.snapper base.txt x11.txt snapper.logrotate default-config	\
+	org.opensuse.snapper.conf org.opensuse.snapper.service
 
 install-data-local:
 	install -D -m 644 snapper.logrotate $(DESTDIR)/etc/logrotate.d/snapper
@@ -11,4 +12,5 @@ install-data-local:
 	install -d -m 755 $(DESTDIR)/etc/snapper/filters
 	install -D -m 644 base.txt $(DESTDIR)/etc/snapper/filters/base.txt
 	install -D -m 644 x11.txt $(DESTDIR)/etc/snapper/filters/x11.txt
-
+	install -D -m 644 org.opensuse.snapper.conf /etc/dbus-1/system.d/org.opensuse.snapper.conf
+	install -D -m 644 org.opensuse.snapper.service /usr/share/dbus-1/system-services/org.opensuse.snapper.service
