--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -12,5 +12,5 @@ install-data-local:
 	install -d -m 755 $(DESTDIR)/etc/snapper/filters
 	install -D -m 644 base.txt $(DESTDIR)/etc/snapper/filters/base.txt
 	install -D -m 644 x11.txt $(DESTDIR)/etc/snapper/filters/x11.txt
-	install -D -m 644 org.opensuse.snapper.conf /etc/dbus-1/system.d/org.opensuse.snapper.conf
-	install -D -m 644 org.opensuse.snapper.service /usr/share/dbus-1/system-services/org.opensuse.snapper.service
+	install -D -m 644 org.opensuse.snapper.conf $(DESTDIR)/etc/dbus-1/system.d/org.opensuse.snapper.conf
+	install -D -m 644 org.opensuse.snapper.service $(DESTDIR)/usr/share/dbus-1/system-services/org.opensuse.snapper.service
