--- a/configure.in
+++ b/configure.in
@@ -62,6 +62,7 @@ AC_OUTPUT(
 	data/Makefile
 	doc/Makefile
 	doc/snapper.8:doc/snapper.8.in
+	doc/snapperd.8:doc/snapperd.8.in
 	po/Makefile
 	testsuite-real/Makefile
 	package/snapper.spec:snapper.spec.in
