--- a/configure.in
+++ b/configure.in
@@ -54,10 +54,10 @@ AC_OUTPUT(
 	bindings/Makefile
 	bindings/python/Makefile
 	tools/Makefile
-	tools/utils/Makefile
 	dbus/Makefile
 	server/Makefile
 	client/Makefile
+	client/utils/Makefile
 	scripts/Makefile
 	data/Makefile
 	doc/Makefile
