--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -12,7 +12,8 @@ bin_PROGRAMS = snapper
 snapper_SOURCES =			\
 	snapper.cc			\
 	types.cc	types.h		\
-	commands.cc	commands.h
+	commands.cc	commands.h	\
+	cleanup.cc	cleanup.h
 
 snapper_LDADD = ../snapper/libsnapper.la utils/libutils.la ../dbus/libdbus.la -ldbus-1
 
