--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -27,11 +27,8 @@ Patch1:		no-readonly.diff
 Prefix:		/usr
 BuildRequires:	boost-devel doxygen gcc-c++ libtool libxml2-devel
 BuildRequires:	python-devel swig
-%if 0%{?suse_version}
-BuildRequires:	libblocxx-devel
-%if 0%{?suse_version} >= 1210
+%if (0%{?suse_version} && 0%{?suse_version} >= 1210)
 BuildRequires:	libzypp(plugin:commit)
-%endif
 %endif
 Requires:	libsnapper@LIBVERSION_MAJOR@ = %version
 %if 0%{?suse_version}
@@ -140,9 +137,6 @@ Authors:
 %package -n libsnapper-devel
 Requires:	libsnapper@LIBVERSION_MAJOR@ = %version
 Requires:	gcc-c++ libstdc++-devel boost-devel libxml2-devel
-%if 0%{?suse_version}
-Requires:	blocxx-devel
-%endif
 Summary:	Header files and documentation for libsnapper
 Group:		Development/Languages/C and C++
 
