- work on dbus interface

--- a/data/org.opensuse.Snapper.service
+++ b/data/org.opensuse.Snapper.service
@@ -1,5 +1,5 @@
 # DBus service activation config
 [D-BUS Service]
-Name=org.opensuse.snapper
+Name=org.opensuse.Snapper
 Exec=/usr/sbin/snapperd
 User=root
