--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -90,8 +90,8 @@ rm -rf "$RPM_BUILD_ROOT"
 %config(noreplace) %{_sysconfdir}/logrotate.d/snapper
 /etc/cron.hourly/suse.de-snapper
 /etc/cron.daily/suse.de-snapper
-%config /etc/dbus-1/system.d/org.opensuse.snapper.conf
-%{prefix}/share/dbus-1/system-services/org.opensuse.snapper.service
+%config /etc/dbus-1/system.d/org.opensuse.Snapper.conf
+%{prefix}/share/dbus-1/system-services/org.opensuse.Snapper.service
 
 %package -n libsnapper@LIBVERSION_MAJOR@
 Summary:	Library for filesystem snapshot management
