--- a/dbus/Makefile.am
+++ b/dbus/Makefile.am
@@ -2,7 +2,7 @@
 # Makefile.am for snapper/utils/dbus
 #
 
-INCLUDES = -I$(top_srcdir) -I/usr/include/dbus-1.0 -I/usr/lib/dbus-1.0/include
+INCLUDES = -I$(top_srcdir) -I/usr/include/dbus-1.0 -I$(libdir)/dbus-1.0/include
 
 noinst_LTLIBRARIES = libdbus.la
 
