- handle variable location of compare-dirs binary

--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -2,7 +2,7 @@
 # Makefile.am for snapper/snapper
 #
 
-AM_CXXFLAGS = -D_FILE_OFFSET_BITS=64 -I/usr/include/libxml2
+AM_CXXFLAGS = -D_FILE_OFFSET_BITS=64 -DLIBDIR=\"$(libdir)\" -I/usr/include/libxml2
 
 lib_LTLIBRARIES = libsnapper.la
 
