--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -121,9 +121,9 @@ Authors:
 %else
 %config(noreplace) %{_sysconfdir}/sysconfig/snapper
 %endif
-%dir %{prefix}/lib/snapper
-%dir %{prefix}/lib/snapper/bin
-%{prefix}/lib/snapper/bin/compare-dirs
+%dir %{_libdir}/snapper
+%dir %{_libdir}/snapper/bin
+%{_libdir}/snapper/bin/compare-dirs
 
 %post -n libsnapper@LIBVERSION_MAJOR@
 /sbin/ldconfig
