--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -10,5 +10,5 @@ toolsbindir = $(libdir)/snapper/bin
 toolsbin_PROGRAMS = compare-dirs
 
 compare_dirs_SOURCES = compare-dirs.cc
-compare_dirs_LDADD = ../snapper/libsnapper.la -lboost_thread
+compare_dirs_LDADD = ../snapper/libsnapper.la -lboost_thread-mt
 
