- run background comparisons sequential

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -11,6 +11,7 @@ snapperd_SOURCES =					\
 	snapperd.cc					\
 	Client.cc		Client.h		\
 	MetaSnapper.cc		MetaSnapper.h		\
+	Background.cc		Background.h		\
 	Types.cc		Types.h
 
 snapperd_LDADD = ../snapper/libsnapper.la ../dbus/libdbus.la	\
